# NavigationSystem

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture-guide.md  interface-reference.md  project-guide.md
src/: CMakeLists.txt
src/app/: main.cpp
src/core/algorithms/: DijkstraPathFinder.cpp  DijkstraPathFinder.h  DynamicPathFinder.cpp  DynamicPathFinder.h  PathFinder.h
src/core/generation/: GridPerturbationGenerator.cpp  GridPerturbationGenerator.h  HierarchicalRoadGenerator.cpp  HierarchicalRoadGenerator.h  MapGenerator.h
src/core/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
src/core/io/: GraphIO.cpp  GraphIO.h
src/core/spatial/: BoundingBox.cpp  BoundingBox.h  ClusterIndex.cpp  ClusterIndex.h  QuadTree.cpp  QuadTree.h
src/core/traffic/: TrafficModel.cpp  TrafficModel.h  TrafficSimulator.cpp  TrafficSimulator.h
src/gui/: MainWindow.cpp  MainWindow.h
src/gui/items/: ClusterItem.cpp  ClusterItem.h  EdgeItem.cpp  EdgeItem.h  NodeItem.cpp  NodeItem.h  RoadStyle.h
src/gui/view/: DisplayFilter.h  MapScene.cpp  MapScene.h  MapView.cpp  MapView.h
src/gui/widgets/: ControlPanel.cpp  ControlPanel.h  GenerateMapDialog.cpp  GenerateMapDialog.h
